# north

./: .gitignore  Cargo.toml  README.md  north.py  syscall_write  test.py
_test_artifacts/examples/: argv.txt  atoi.txt  cat.txt  fd.txt  fibonacci.txt  isprime.txt  print_name.txt
_test_artifacts/tests/: argc_argv.txt  arithmetic.txt  bitwise.txt  character_literal.txt  comments.txt  comparison.txt  control_flow.txt  control_flow_if.txt  control_flow_while.txt  functions.txt  invalid_character_literal.txt  invalid_character_literal2.txt  invalid_character_literal_1.txt  invalid_character_literal_2.txt  (+63 more)
examples/: argv.north  atoi.north  cat.north  fd.north  fread.north  isprime.north  print_name.north
lib/: maths.north  stdlib.north  string.north
misc/: keywords.north  north.vim
src/: main.rs
tests/: 2drop.north  2dup.north  2over.n  2swap.n  addition.n  addition.north  argc_argv.north  arithmetic.north  bitshift.north  bitwise.north  character_literal.north  character_literals.north  cli.rs  comments.n  comments.north  comparison.north  control_flow.north  control_flow_while.north  drop.north  dup.n  dupnz.north  exit.north  fibonacci.north  first_test.n  functions.north  if.north  integer_division.n  invalid_character_literal_1.north  invalid_function_10.north  invalid_function_11.north  invalid_function_12.north  invalid_function_13.north  invalid_function_14.north  invalid_function_2.north  invalid_function_3.north  invalid_function_4.north  invalid_function_5.north  invalid_function_6.north  invalid_function_7.north  invalid_function_8.north  (+52 more)
(+5 files in other folders)
