[package]
name = "northc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.8", features = ["derive"] }
hex = "0.4.3"
phf = { version = "0.10", features = ["macros"] }
colored = "2"

[dev-dependencies]
predicates = "2.1.1"
subprocess = "0.2.9"
pretty_assertions = "1.2.1"
